--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   url_launcher: ^5.7.8
   cached_network_image: ^2.3.3
   flutter_snake_navigationbar: ^0.4.1+3
+  google_maps_flutter: ^1.0.6
 
 dev_dependencies:
   flutter_test:
